<resources>
    <string name="app_name">PriceMonitor</string>
    <string name="refresh_menu_item">Refresh</string>
    <string name="settings_menu_item">Settings</string>
    <string name="clear_db_menu_item">Clear DB</string>
    <string name="fill_db_menu_item">Fill DB</string>
    <string name="delete_latest_price_menu_item">Delete latest price</string>
    <string name="stop_requests_menu_item">Stop background requests</string>

    <string name="no_data_to_display_message">No data to display</string>
    <string name="price_unknown_message">Unknown</string>
    <string name="current_price_label">Most latest price:</string>

    <string name="notifications_item_bottomsheet">Notifications</string>
    <string name="goto_item_bottomsheet">Open webpage</string>
    <string name="add_store_product_bottomsheet">Add store for this product</string>
    <string name="delete_product_bottomsheet">Delete this product</string>

    <string name="price_dropped_notification_text">Price dropped to %1$d (was %2$d)!</string>

    <!--Add product dialog-->
    <string name="title_addproductdialog">Add new product</string>
    <string name="hint_itemname_addproductdialog">Product name</string>
    <string name="hint_url_addproductdialog">Product URL</string>
    <string name="cancel_button_addproductdialog">Cancel</string>
    <string name="add_button_addproductdialog">Add</string>
    <string name="error_unknown_store_addproductdialog">This URL belongs to unknown store</string>
    <string name="error_noturl_addproductdialog">This is not an URL</string>
    <string name="error_empty_url_addproductdialog">URL is empty</string>
    <string name="error_invalid_productname_addproductdialog">Invalid product name</string>
    <string name="message_store_found_addproductdialog">Known store found for this URL: \'%1$s\'.</string>
    <string name="message_retrieving_price_from_server_addproductdialog">Connecting to server and retrieving price...</string>
    <string name="message_price_retrieved_addproductdialog">Price from server retrieved successfully: %1$d</string>
    <string name="error_cannot_connect_addproductdialog">Cannot connect to server: %1$s</string>
    <string name="error_cannot_extract_price_addproductdialog">Connected to server, but cannot extract price from the request</string>
    <string name="error_unknown_addproductdialog">Unknown error</string>

</resources>
