<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh_menu_item"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="collapseActionView|always"
        android:layout_width="wrap_content" />




    <item
        android:id="@+id/clear_db_menu_item"
        android:orderInCategory="100"
        android:title="@string/clear_db_menu_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/fill_db_menu_item"
        android:orderInCategory="101"
        android:title="@string/fill_db_menu_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/delete_latest_price_menu_item"
        android:orderInCategory="102"
        android:title="@string/delete_latest_price_menu_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/stop_requests_menu_item"
        android:orderInCategory="103"
        android:title="@string/stop_requests_menu_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings_menu_item"
        android:orderInCategory="110"
        android:title="@string/settings_menu_item"
        app:showAsAction="never"/>




</menu>